# aerohacks-drone-control

./: README.md  drone rc.py  pyproject.toml  starter code.py  test_drone.py
aerohacks_drone/: __init__.py  client.py  pyproject.toml
drone_code/: drone_code.ino
no_pid_drone/: aerohacks.ino
