[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aerohacks-drone"
version = "0.1.0"
description = "Python client for the AeroHacks drone"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["aerohacks_drone"]

[project.urls]
Homepage = "https://github.com/Oscar-T24/aerohacks-drone-control"