[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aerohacks-drone"
version = "0.1.0"
description = "Python client for the AeroHacks drone"
authors = [
    {name = "McGill Aerial Design"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.urls]
Homepage = "https://github.com/McGill-Aerial-Design/aerohacks-drone-control"